# code-reviewer

./: .coverage  .gitignore  AGENTS.md  README.md  main.py  pkg.toml  pyproject.toml
.github/workflows/: build.yml  code-review.yml  test.yml
code_reviewer/: cli.py  llm.py  output.py  prompt.py
examples/: github-actions.yml
tests/: test_cli.py  test_llm.py  test_output.py  test_prompt.py
